--- a/index.html
+++ b/index.html
@@ -8,28 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="saludito">
-        <p>Holas</p>
-    </h1>
-    <div id="container">
-        <h1>jamalismo</h1>
-    </div>
-            <ul>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-                <li>Soy una gran lista</li>
-            </ul>
-    <div>
-        <p>i am already dead</p>
-    </div>
-
+    <html>
+        <head>
+          <meta charset="utf-8">
+          <title>HTML Starter</title>
+        </head>
+        <body>
+          Cantidad:<input id="textInput" type="text"/>
+          <button onclick="calcVal()">Calcular Total</button>
+          <p id="demure">Total</p>
+        </body>
+      </html>
 </body>
 </html>
